--- a/translations/kangyur/translations/088-016_toh522,848-the_dharani_of_the_tathagata_jnanolka.xml
+++ b/translations/kangyur/translations/088-016_toh522,848-the_dharani_of_the_tathagata_jnanolka.xml
@@ -14,23 +14,18 @@
                 <title type="longTitle" xml:lang="en">The Noble Dhāraṇī of the Tathāgata Jñānolka that Purifies All Rebirths</title>
                 <title type="mainTitle" xml:lang="bo">ཡེ་ཤེས་ཏ་ལ་ལའི་གཟུངས།</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་ཡེ་ཤེས་ཏ་ལ་ལ་ཞེས་བྱའི་གཟུངས་འགྲོ་བ་ཐམས་ཅད་ཡོངས་སུ་སྦྱོང་བ།</title>
-
-
                 <author role="translatorMain" ref="contributors.xml#team-9">Translated by the
                     Dharmachakra Translation Committee<lb/>under the patronage and supervision of
                     84000: Translating the Words of the Buddha</author>
                 <author role="translatorEng" ref="contributors.xml#person-274">Adam Krug</author>
-            
-<editor role="associateEditor" ref="contributors.xml#person-250">Rory Lindsay, Dr.</editor>
+                <editor role="associateEditor" ref="contributors.xml#person-250">Rory Lindsay, Dr.</editor>
                 <editor role="finalReviewer" ref="contributors.xml#person-139">Dr. John Canti</editor>
                 <editor role="reviser" ref="contributors.xml#person-74">Ryan Damron</editor>
-
-
-    <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chökyi Nyima Rinpoche</consultant>
+                <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chökyi Nyima Rinpoche</consultant>
     <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.11 <date>2021</date>
+                <edition>v 1.1.15 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -54,7 +49,7 @@
             <sourceDesc>
                 <bibl key="toh522" type="text">
                     <ref>Toh 522</ref>
-                    <biblScope>Degé Kangyur, vol. 88 (rgyud ’bum, na), folios 42.a–43.b (in 1737 par phud printing), folios 59.a–60.b (in later printings)</biblScope><!-- bibl scope supplied in Docx -->
+                    <biblScope>Degé Kangyur, vol. 88 (rgyud ’bum, na), folios 42.a–43.b (in 1737 <foreign xml:lang="Bo-Ltn">par phud</foreign> printing), folios 59.a–60.b (in later printings)</biblScope><!-- bibl scope supplied in Docx -->
                     <location work="UT4CZ5369" count-pages="4">
                         <volume number="88" start-page="117" end-page="120"/>
                     </location>
@@ -76,7 +71,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-03-17T16:17:47.489Z" user="admin">17/03/2021 16:17:47</note>
+                <note type="lastUpdated" date-time="2023-01-26T20:46:00.966Z" user="admin">26/01/2023 20:46:00</note>
 
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-10T08:04:49.554Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2019-12-19T07:26:43.57Z" user="andreas">2.d</note>
@@ -100,6 +95,7 @@
     <note type="updated" update="text-version" value="1.1.9" date-time="2021-03-12T19:07:07.462Z" user="celso">reset blank pdfs</note>
     <note type="updated" update="text-version" value="1.1.10" date-time="2021-03-16T16:11:59.813Z" user="celso">Note with @key added explaining the folio shift in toh522</note>
     <note type="updated" update="text-version" value="1.1.11" date-time="2021-03-17T16:17:44.535Z" user="celso">@key added to note to create alternate message regarding vol 100+ text</note>
+    <note type="updated" update="text-version" value="1.1.12" date-time="2021-09-23T20:12:04.702Z" user="celso">"Compendium of Incantations" to "Compendium of Dhāraṇī"</note>    <note type="updated" update="text-version" value="1.1.13" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.1.14" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>    <note type="updated" update="text-version" value="1.1.15" date-time="2023-01-26T20:45:57.865Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -183,10 +179,10 @@
                                 <title xml:lang="Bo-Ltn">dkar chag ’phang thang ma</title>,
                                 p. 30.</note> royal Tibetan catalogs of translated works, which
                         indicates that the text was translated into Tibetan by at least the early
-                        ninth century. It is found in all Kangyurs, with one copy in Kangyurs of the Themphangma line and often two in Kangyurs of predominantly Tshalpa lineage; in the Degé Kangyur, there is one copy in the Action Tantra section (Toh 522) and one in the Compendium of Incantations (Toh 848),<note place="end" xml:id="UT22084-088-016-52">
-                            <p key="toh522" tid="43">Note that there is a discrepancy among various databases for cataloging the Toh 848 version of
+                        ninth century. It is found in all Kangyurs, with one copy in Kangyurs of the Themphangma line and often two in Kangyurs of predominantly Tshalpa lineage; in the Degé Kangyur, there is one copy in the Action Tantra section (Toh 522) and one in the Compendium of Dhāraṇīs (Toh 848),<note place="end" xml:id="UT22084-088-016-52">
+                            <p key="toh522">Note that there is a discrepancy among various databases for cataloging the Toh 848 version of
                                 this text within vol. 100 or 101 of the Degé Kangyur. See Toh 848 <ref target="https://read.84000.co/translation/toh848.html#end-note-UT22084-088-016-52">note 5</ref> for details.</p>
-                            <p key="toh848" tid="44">This text, Toh 848, and all those contained in this same volume (<foreign xml:lang="Bo-Ltn">gzungs ’dus, e</foreign>), are listed as being located in volume 100 of the Degé Kangyur by the Buddhist Digital Resource Center (BDRC). However, several other Kangyur databases—including the eKangyur that supplies the digital input version displayed by the 84000 Reading Room—list this work as being located in volume 101. This discrepancy is partly due to the fact that the two volumes of the <foreign xml:lang="Bo-Ltn">gzungs ’dus</foreign> section are an added supplement not mentioned in the original catalog, and also hinges on the fact that the compilers of the Tōhoku catalog placed another text—which forms a whole, very large volume—the <title xml:lang="Sa-Ltn">Vimalaprabhā­nāmakālacakra­tantraṭīkā</title> (<title xml:lang="Bo-Ltn">dus ’khor ’grel bshad dri med ’od</title>, Toh 845), before the present volume, numbering it as vol. 100, although it is almost certainly intended to come right at the end of the Degé Kangyur texts as volume 102; indeed its final fifth chapter is often carried over and wrapped in the same volume as the Kangyur <foreign xml:lang="Bo-Ltn">dkar chags</foreign> (catalog). Please note this discrepancy when using the eKangyur viewer in this translation.</p>
+                            <p key="toh848">This text, Toh 848, and all those contained in this same volume (<foreign xml:lang="Bo-Ltn">gzungs ’dus, e</foreign>), are listed as being located in volume 100 of the Degé Kangyur by the Buddhist Digital Resource Center (BDRC). However, several other Kangyur databases—including the eKangyur that supplies the digital input version displayed by the 84000 Reading Room—list this work as being located in volume 101. This discrepancy is partly due to the fact that the two volumes of the <foreign xml:lang="Bo-Ltn">gzungs ’dus</foreign> section are an added supplement not mentioned in the original catalog, and also hinges on the fact that the compilers of the Tōhoku catalog placed another text—which forms a whole, very large volume—the <title xml:lang="Sa-Ltn">Vimalaprabhā­nāmakālacakra­tantraṭīkā</title> (<title xml:lang="Bo-Ltn">dus ’khor ’grel bshad dri med ’od</title>, Toh 845), before the present volume, numbering it as vol. 100, although it is almost certainly intended to come right at the end of the Degé Kangyur texts as volume 102; indeed its final fifth chapter is often carried over and wrapped in the same volume as the Kangyur <foreign xml:lang="Bo-Ltn">dkar chags</foreign> (catalog). Please note this discrepancy when using the eKangyur viewer in this translation.</p>
                         </note> while in some other Tshalpa Kangyurs (Choné, Lithang, Urga, Lhasa, and others) there are two copies in different volumes of the Tantra section. The text was translated into Chinese twice, first in the late
                         seventh century by the translator Devaprajñā (T 1397)<note place="end" xml:id="UT22084-088-016-13"> Lewis R. Lancaster, “K 476,” <title xml:lang="en">The Korean Buddhist Canon</title>, accessed
                                 February 12, 2019,
@@ -216,7 +212,7 @@
                         <ref cRef="F.59.a" type="folio" key="toh522" xml:id="UT22084-088-016-62"/>
                         <ref cRef="F.55.a" type="folio" key="toh848" xml:id="UT22084-088-016-63"/>
                         <note place="end" xml:id="UT22084-088-016-61">
-                        <p key="toh522" tid="41">In the <foreign xml:lang="Bo-Ltn" type="term">par phud</foreign> printing this text begins on F.42.a. This is due to a discrepancy 
+                        <p key="toh522">In the <foreign xml:lang="Bo-Ltn" type="term">par phud</foreign> printing this text begins on F.42.a. This is due to a discrepancy 
                             in volume 88 (<foreign xml:lang="Bo-Ltn">rgyud ’bum</foreign>, <foreign xml:lang="Bo-Ltn">na</foreign>) of the Degé Kangyur between the 1737 <foreign xml:lang="Bo-Ltn">par 
                                 phud</foreign> printings and the late (post <foreign xml:lang="Bo-Ltn">par phud</foreign>) printings. In the latter case, 
                             an extra work, <title xml:lang="Sa-Ltn">Bodhi­maṇḍasyālaṃkāra­lakṣa­dhāraṇī</title> (Toh 508, <title xml:lang="Bo-Ltn">byang chub 
@@ -224,7 +220,7 @@
                             thereby displacing the pagination of all the following texts in the same volume 
                             by 17 folios. Since the eKangyur follows the later printing, this later reference 
                             has been used in order to link to the eKangyur viewer.</p>
-                        <p key="toh848" tid="42">In the Toh 522 version of this text there is discrepancy in the folio numbering between the 1737 <foreign xml:lang="Bo-Ltn">par phud</foreign> printings and the late (post <foreign xml:lang="Bo-Ltn">par phud</foreign>) printings of the Degé Kangyur. Although the discrepancy is irrelevant here, further details concerning this may be found in <ref target="https://read.84000.co/translation/toh522.html#end-note-UT22084-088-016-61">note 8</ref> of the Toh 522 version of this text.</p>
+                        <p key="toh848">In the Toh 522 version of this text there is discrepancy in the folio numbering between the 1737 <foreign xml:lang="Bo-Ltn">par phud</foreign> printings and the late (post <foreign xml:lang="Bo-Ltn">par phud</foreign>) printings of the Degé Kangyur. Although the discrepancy is irrelevant here, further details concerning this may be found in <ref target="https://read.84000.co/translation/toh522.html#end-note-UT22084-088-016-61">note 8</ref> of the Toh 522 version of this text.</p>
                     </note> <ref cRef="F.59.b" type="folio" key="toh522" xml:id="UT22084-088-016-64"/> Homage to the Omniscient One.<lb/>Homage to all the buddhas and
                         bodhisattvas.<lb/>Homage to the blessed one, the tathāgata
                         Jñānolka.<lb/>Homage to the tathāgata Suvarṇa­prabhākūṭa­nirbhāsa.<lb/>Homage
