--- a/translations/kangyur/translations/088-022_toh528,858-the_dharani_of_agrapradipa.xml
+++ b/translations/kangyur/translations/088-022_toh528,858-the_dharani_of_agrapradipa.xml
@@ -24,7 +24,7 @@
                 <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.7 <date>2023</date>
+                <edition>v 1.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -63,7 +63,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-24T12:53:00.754Z" user="admin">24/01/2023 12:53:00</note>
+                <note type="lastUpdated" date-time="2023-01-26T20:46:54.029Z" user="admin">26/01/2023 20:46:54</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-01-13T09:56:19.863Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-01-13T09:56:19.863Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-01-31T10:53:56.195Z" user="line-tofte">3</note>
@@ -103,6 +103,7 @@
                 <note type="updated" update="text-version" value="1.0.5" date-time="2023-01-11T15:04:59.963Z" user="martina-cotter">Updated typo.</note>
                 <note type="updated" update="text-version" value="1.0.6" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
                 <note type="updated" update="text-version" value="1.0.7" date-time="2023-01-24T12:52:57.934Z" user="martina-cotter">Updated typo in Sanskrit.</note>
+                <note type="updated" update="text-version" value="1.0.8" date-time="2023-01-26T20:46:51.126Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
