--- a/translations/kangyur/translations/066-015_toh257-the_sutra_of_the_quintessence_of_the_sun.xml
+++ b/translations/kangyur/translations/066-015_toh257-the_sutra_of_the_quintessence_of_the_sun.xml
@@ -33,7 +33,7 @@
         <sponsor ref="sponsors.xml#sponsor-121">Manju Sun and Jamyang Sun</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.3 <date>2022</date>
+                <edition>v 1.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -61,8 +61,8 @@
           <biblScope>Degé Kangyur, vol. 66 (mdo sde, za), folios 91.b–245.b</biblScope>
           <author role="translatorTib">Bandé Zangkyong</author>
           <author role="translatorTib">Bandé Kawa Paltsek</author>
-          <location work="UT4CZ5369" count-pages="308">
-            <volume number="66" start-page="182" end-page="489"/>
+          <location work="UT4CZ5369" count-pages="309">
+            <volume number="66" start-page="182" end-page="490"/>
           </location>
           <!--<location work="UT4CZ5369" count-pages="279">
             <volume number="66" start-page="182" end-page="391"/>
@@ -73,7 +73,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-12-06T19:13:18.091Z" user="admin">06/12/2022 19:13:18</note>
+        <note type="lastUpdated" date-time="2023-01-27T00:08:13.271Z" user="admin">27/01/2023 00:08:13</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T15:04:03.28Z" user="line-tofte">2.h</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-10T09:50:51.422Z" user="line-tofte">Auto (update-contributors)</note>
@@ -120,6 +120,9 @@
           <note type="updated" update="text-version" value="1.0.1" date-time="2022-09-21T08:39:49.554Z" user="sameer">Included in App v2.3</note>
           <note type="updated" update="text-version" value="1.0.2" date-time="2022-12-06T19:00:16.063Z" user="martina-cotter">Added pending links.</note>
           <note type="updated" update="text-version" value="1.0.3" date-time="2022-12-06T19:13:15.136Z" user="martina-cotter">Added pending links.</note>
+          <note type="updated" update="text-version" value="1.0.4" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
+          <note type="updated" update="text-version" value="1.0.5" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+          <note type="updated" update="text-version" value="1.0.6" date-time="2023-01-27T00:08:10.376Z" user="celso">Added missing folio ref at colophon</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -291,7 +294,7 @@
               1905, p. 286.</note> This passage of the text, which begins at <ptr target="#UT22084-066-015-1122">12.26</ptr>, relates the story of a specific site in
             Khaṣa called Gomasālagandha, and is a condensed version of the narrative of the sūtra
               <title xml:lang="en">The Prophecy on Mount Gośṛṅga</title>
-                        <note place="end" xml:id="UT22084-066-015-25"> Dharmacakra Translation Committee, trans., <title xml:lang="en">
+                        <note place="end" xml:id="UT22084-066-015-25"> Dharmachakra Translation Committee, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh357.html">The
                   Prophecy on Mount Gośṛṅga</ref>
                             </title>, Toh 237 (84000: Translating the Words of
@@ -7908,7 +7911,8 @@
             Assembly.</trailer>
           <milestone unit="chunk" xml:id="UT22084-066-015-1195"/>
           <trailer tid="860">This concludes the noble very extensive sūtra “<title xml:lang="en">The
-              Quintessence of the Sun</title>.”</trailer>
+            Quintessence of the Sun</title>.” <ref cRef="F.245.b" type="folio" xml:id="UT22084-066-015-1605"/>
+                    </trailer>
         </div>
 
         <div type="colophon" xml:id="UT22084-066-015-colophon">
@@ -8000,7 +8004,7 @@
             by The Lamrim Chenmo Translation Committee. Ithaca, NY: Snow Lion, 2002. </bibl>
           <bibl xml:id="UT22084-066-015-1214">Demiéville, Paul. <title xml:lang="fr">Choix d’études
               bouddhiques</title>. Leiden: Brill, 1973.</bibl>
-          <bibl xml:id="UT22084-066-015-1215">Dharmacakra Translation Committee, trans. <title xml:lang="en">
+          <bibl xml:id="UT22084-066-015-1215">Dharmachakra Translation Committee, trans. <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh357.html">The Prophecy
                 on Mount Gośṛṅga</ref>
                         </title> (<title xml:lang="Sa-Ltn">Gośṛṅgavyākaraṇa</title>,
