--- a/translations/kangyur/translations/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
+++ b/translations/kangyur/translations/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
@@ -38,16 +38,16 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
-                        </editionStmt>
-                        <publicationStmt status="2.a">
-                                <publisher>
+            </editionStmt>
+                        <publicationStmt status="2">
+                <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability>
+                <availability>
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -59,12 +59,12 @@
                                                   details, see the Creative Commons license.</p>
                                         </licence>
                                 </availability>
-                                <idno xml:id="UT22084-072-011"/>
-                                <note>An early mistake in the assigning of UT numbers within the
+                <idno xml:id="UT22084-072-011"/>
+                <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                                <date>2023-01-23</date>
-                        </publicationStmt>
+                <date>2023-01-23</date>
+            </publicationStmt>
 
                         <sourceDesc>
                                 <bibl key="toh311" type="text">
@@ -79,7 +79,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-01-25T08:10:29.142Z" user="martina-cotter">25/01/2023 08:10:29</note>
+                                <note type="lastUpdated" date-time="2023-01-27T08:27:01.007Z" user="admin">27/01/2023 08:27:01</note>
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated
                                         version increment</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2021-10-19T08:19:26.558Z" user="line-tofte">2.h</note>
@@ -122,6 +122,8 @@
                                         (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.0.16" date-time="2023-01-20T12:34:41.328Z" user="line-tofte">Auto
                                         (update-contributors)</note>
+                            <note type="updated" update="translation-status" value="2" date-time="2023-01-27T08:26:55.388Z" user="line-tofte">2</note>
+                            <note type="updated" update="text-version" value="0.0.2" date-time="2023-01-27T08:26:55.388Z" user="line-tofte">Auto (update-publication-status)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
