--- a/translations/kangyur/translations/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
+++ b/translations/kangyur/translations/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
@@ -4,41 +4,34 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">’du shes bcu gcig bstan
-                                        pa</title>
-                                <title type="mainTitle" xml:lang="bo">འདུ་ཤེས་བཅུ་གཅིག་བསྟན་པ།</title>
                                 <title type="mainTitle" xml:lang="en">Teaching the Eleven
                                         Thoughts</title>
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Saṃjñānaikadaśa­nirdeśa</title>
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་འདུ་ཤེས་བཅུ་གཅིག་བསྟན་པའི་མདོ།</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa ’du shes bcu
-                                        gcig bstan pa’i mdo</title>
+                                <title type="mainTitle" xml:lang="bo">འདུ་ཤེས་བཅུ་གཅིག་བསྟན་པ།</title>
+                                <title type="mainTitle" xml:lang="Bo-Ltn">’du shes bcu gcig bstan
+                                        pa</title>
                                 <title type="longTitle" xml:lang="en">The Noble Sūtra “Teaching the
                                         Eleven Thoughts”</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­saṃjñānaikadaśa­nirdeśa­sūtra</title>
-                                <title type="otherTitle" xml:lang="zh"/>
-                                <author ref="eft:team-27" role="translatorMain">Translated by the
+                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa ’du shes bcu
+                                        gcig bstan pa’i mdo</title>
+                                <title type="longTitle" xml:lang="bo">འཕགས་པ་འདུ་ཤེས་བཅུ་གཅིག་བསྟན་པའི་མདོ།</title>
+                                <author role="translatorMain" ref="eft:team-27">Translated by the
                                         Sakya Pandita Translation Group<lb/>under the patronage and
                                         supervision of 84000: Translating the Words of the
                                         Buddha</author>
-                                <editor role="externalReviewer" ref="eft:person-281">Paul
-                                        Harrison</editor>
-                                <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga
-                                        Chodron</author>
-                                <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo
-                                        Kalsang Gyaltsen</consultant>
-                                <editor role="projectEditor" ref="eft:person-289">Nathaniel
-                                        Rich</editor>
+                                <editor role="externalReviewer" ref="eft:person-281">Paul Harrison</editor>
+                                <author role="translatorEng" ref="eft:person-175">Chodrungma Kunga Chodron</author>
+                                <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
+                                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
                                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
-                                <author role="translatorEng" ref="eft:person-173">Ven. Khenpo
-                                        Kalsang Gyaltsen</author>
-                                <editor role="projectEditor" ref="eft:person-250">Rory
-                                        Lindsay</editor>
-                                <editor role="TEImarkupEditor" ref="eft:person-381">Martina
-                                        Cotter</editor>
+                                <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
+                                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
+                                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
+                                <consultant role="projectManager" ref="eft:person-175">Chodrungma Kunga Chodron</consultant>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="2">
@@ -79,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-01-27T08:27:01.007Z" user="admin">27/01/2023 08:27:01</note>
+                                <note type="lastUpdated" date-time="2023-01-27T08:27:52.008Z" user="admin">27/01/2023 08:27:52</note>
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated
                                         version increment</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2021-10-19T08:19:26.558Z" user="line-tofte">2.h</note>
@@ -122,8 +115,9 @@
                                         (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.0.16" date-time="2023-01-20T12:34:41.328Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-                            <note type="updated" update="translation-status" value="2" date-time="2023-01-27T08:26:55.388Z" user="line-tofte">2</note>
-                            <note type="updated" update="text-version" value="0.0.2" date-time="2023-01-27T08:26:55.388Z" user="line-tofte">Auto (update-publication-status)</note>
+                                <note type="updated" update="translation-status" value="2" date-time="2023-01-27T08:26:55.388Z" user="line-tofte">2</note>
+                                <note type="updated" update="text-version" value="0.0.2" date-time="2023-01-27T08:26:55.388Z" user="line-tofte">Auto (update-publication-status)</note>
+                            <note type="updated" update="text-version" value="0.0.3" date-time="2023-01-27T08:27:46.365Z" user="line-tofte">Auto (update-contributors)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
