--- a/translations/kangyur/placeholders/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
+++ b/translations/kangyur/placeholders/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
@@ -17,9 +17,10 @@
                 <author role="translatorEng" ref="eft:person-373">Caley Smith</author>
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
+                <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.12 <date>2021</date>
+                <edition>v 0.0.13 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.c">
@@ -47,7 +48,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-29T10:14:51.311Z" user="admin">29/11/2022 10:14:51</note>
+                <note type="lastUpdated" date-time="2023-01-27T14:32:12.419Z" user="admin">27/01/2023 14:32:12</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-08T09:38:10.747Z" user="line-tofte">Auto (update-contributors)</note>
@@ -67,6 +68,7 @@
                 <note type="updated" update="text-version" value="0.0.11" date-time="2022-08-02T10:40:37.328Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2022-11-29T10:14:45.8Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2022-11-29T10:14:45.8Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2023-01-27T14:32:06.778Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
