--- a/translations/kangyur/translations/059-009_toh166-the_sutra_of_the_questions_of_rastrapala.xml
+++ b/translations/kangyur/translations/059-009_toh166-the_sutra_of_the_questions_of_rastrapala.xml
@@ -27,7 +27,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -69,7 +69,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-01-18T13:48:22.752Z" user="admin">18/01/2023 13:48:22</note>
+                                <note type="lastUpdated" date-time="2023-01-27T18:32:24.145Z" user="admin">27/01/2023 18:32:24</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2022-02-10T10:39:23.55Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-02-10T10:39:23.55Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2022-02-15T13:26:04.633Z" user="line-tofte">3</note>
@@ -111,6 +111,7 @@
                             <note type="updated" update="text-version" value="0.0.3" date-time="2023-01-10T09:16:07.978Z" user="line-tofte">Auto (update-contributors)</note>
                             <note type="updated" update="translation-status" value="1.a" date-time="2023-01-18T13:48:17.009Z" user="martina-cotter">1.a</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-01-18T13:48:17.009Z" user="martina-cotter">First published version</note>
+                            <note type="updated" update="text-version" value="1.0.1" date-time="2023-01-27T18:32:21.308Z" user="andre">Glossary matching revised, activated in CG</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -797,7 +798,7 @@
                                                 Ryukoku University, 1950.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss xml:id="UT22084-059-009-87" type="term" mode="match">
@@ -1422,15 +1423,13 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-059-009-142">
-                                                  <term>Jinamitra</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">dzi na mi tra </term>
+                        <gloss xml:id="UT22084-059-009-142" type="person" mode="match">
+                            <term>Jinamitra</term>
+                            <term xml:lang="Bo-Ltn" status="verified">dzi na mi tra</term>
                             <term xml:lang="bo">ཛི་ན་མི་ཏྲ།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">Jinamitra</term>
-                                                  <term type="definition">An Indian <foreign xml:lang="Sa-Ltn" type="term">paṇḍita</foreign>
-                                                  resident in Tibet during the late eighth and early
-                                                  ninth centuries. </term>
-                                                </gloss>
+                            <term xml:lang="Sa-Ltn" status="verified">Jinamitra</term>
+                            <term type="definition">An Indian paṇḍita resident in Tibet during the late eighth and early ninth centuries. </term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="person" xml:id="UT22084-059-009-143">
@@ -1482,14 +1481,13 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="place" xml:id="UT22084-059-009-148">
-                                                  <term>Rājagṛha </term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">rgyal po’i khab </term>
+                        <gloss xml:id="UT22084-059-009-148" type="place" mode="match">
+                            <term>Rājagṛha</term>
+                            <term xml:lang="Bo-Ltn" status="verified">rgyal po’i khab</term>
                             <term xml:lang="bo">རྒྱལ་པོའི་ཁབ།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">Rājagṛha</term>
-                                                  <term type="definition">Capital of the ancient
-                                                  Indian kingdom of Magadha.</term>
-                                                </gloss>
+                            <term xml:lang="Sa-Ltn" status="verified">Rājagṛha</term>
+                            <term type="definition">Capital of the ancient Indian kingdom of Magadha.</term>
+                        </gloss>
                     </item>
                                 </list>
                         </div>
