--- a/translations/kangyur/translations/043-004_toh67_the_great_lions_roar.xml
+++ b/translations/kangyur/translations/043-004_toh67_the_great_lions_roar.xml
@@ -32,7 +32,7 @@
                                         Xiangzhi Yu, Jiayu Xie</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -76,7 +76,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-01-26T16:58:31.71Z" user="admin">26/01/2023 16:58:31</note>
+                                <note type="lastUpdated" date-time="2023-01-28T23:14:53.557Z" user="admin">28/01/2023 23:14:53</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-09T07:11:15.835Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.g" date-time="2019-12-11T09:08:42.75Z" user="andreas">2.g</note>
@@ -120,6 +120,7 @@
                             <note type="updated" update="text-version" value="0.0.4" date-time="2023-01-19T10:59:14.728Z" user="line-tofte">Auto (update-contributors)</note>
                             <note type="updated" update="translation-status" value="1.a" date-time="2023-01-26T16:58:26.108Z" user="martina-cotter">1.a</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-01-26T16:58:26.108Z" user="martina-cotter">First published version.</note>
+                            <note type="updated" update="text-version" value="1.0.1" date-time="2023-01-28T23:14:50.705Z" user="andre">Glossary matching revised - activated in CG</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -4424,7 +4425,7 @@
                                                 1–20. Groningen: Brill, 1996.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-043-004-490">
