--- a/translations/kangyur/translations/090-041_toh597,984-the_usnisavijaya_dharani.xml
+++ b/translations/kangyur/translations/090-041_toh597,984-the_usnisavijaya_dharani.xml
@@ -37,7 +37,7 @@
                                         Gu</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.2.8 <date>2022</date>
+                <edition>v 1.2.9 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -93,7 +93,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-01-26T20:30:42.041Z" user="admin">26/01/2023 20:30:42</note>
+                                <note type="lastUpdated" date-time="2023-01-28T23:28:41.481Z" user="admin">28/01/2023 23:28:41</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:52:50.454Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-10T08:52:50.454Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-08T09:50:56.094Z" user="line-tofte">Auto
@@ -144,6 +144,7 @@
                             <note type="updated" update="text-version" value="1.2.6" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                             <note type="updated" update="text-version" value="1.2.7" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
                             <note type="updated" update="text-version" value="1.2.8" date-time="2023-01-26T20:30:39.194Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
+                            <note type="updated" update="text-version" value="1.2.9" date-time="2023-01-28T23:28:38.499Z" user="andre">Glossary matching revised - activated in CG</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -1329,7 +1330,7 @@
                                                 819–30. Leiden: Brill, 2015.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-090-041-124">
@@ -1727,21 +1728,13 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-090-041-162">
-                                                  <term>Śakra</term>
-                                                  <term xml:lang="Bo-Ltn">brgya byin </term>
-                                                  <term xml:lang="bo">བརྒྱ་བྱིན།</term>
-                                                  <term xml:lang="Sa-Ltn">Śakra</term>
-                                                  <term type="definition">Common epithet of the god
-                                                          Indra, in Sanskrit meaning “Mighty One,” and in Tibetan
-                                                  “Hundred Gifts.” The Tibetan translation is based
-                                                  on an alternate etymology that <foreign xml:lang="Sa-Ltn">śakra</foreign> is an
-                                                  abbreviation of <foreign xml:lang="Sa-Ltn">śata-kratu</foreign>, “one who has performed a
-                                                  hundred sacrifices.” This epithet often appears
-                                                  together with the title <foreign xml:lang="Sa-Ltn">Devendra</foreign> (“Lord of Gods”). He is ruler
-                                                  of the Heaven of the Thirty-Three.</term>
-                                                  <term type="alternative">Devendra; Indra</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-090-041-162" type="person" mode="match">
+                            <term>Śakra</term>
+                            <term xml:lang="Bo-Ltn">brgya byin</term>
+                            <term xml:lang="bo">བརྒྱ་བྱིན།</term>
+                            <term xml:lang="Sa-Ltn">Śakra</term>
+                            <term type="definition">Common epithet of the god Indra, in Sanskrit meaning “Mighty One,” and in Tibetan “Hundred Gifts.” The Tibetan translation is based on an alternate etymology that <foreign xml:lang="Sa-Ltn">śakra</foreign> is an abbreviation of <foreign xml:lang="Sa-Ltn">śata-kratu</foreign>, “one who has performed a hundred sacrifices.” This epithet often appears together with the title <foreign xml:lang="Sa-Ltn">Devendra</foreign> (“Lord of Gods”). He is ruler of the Heaven of the Thirty-Three.</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="person" xml:id="UT22084-090-041-163">
