--- a/translations/kangyur/translations/090-042_toh598-the_practice_of_the_incantation_of_usnisavijaya.xml
+++ b/translations/kangyur/translations/090-042_toh598-the_practice_of_the_incantation_of_usnisavijaya.xml
@@ -26,7 +26,7 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.4.5 <date>2022</date>
+                <edition>v 1.4.6 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -62,7 +62,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-01-26T20:31:49.455Z" user="admin">26/01/2023 20:31:49</note>
+        <note type="lastUpdated" date-time="2023-01-28T23:35:56.324Z" user="admin">28/01/2023 23:35:56</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:58:16.058Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-12-10T12:58:16.058Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-12-16T08:24:15.715Z" user="line-tofte">3</note>
@@ -110,6 +110,7 @@
           <note type="updated" update="text-version" value="1.4.3" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
           <note type="updated" update="text-version" value="1.4.4" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
           <note type="updated" update="text-version" value="1.4.5" date-time="2023-01-26T20:31:46.6Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
+          <note type="updated" update="text-version" value="1.4.6" date-time="2023-01-28T23:35:53.481Z" user="andre">Cumulative Glossary matching revised - activated in CG </note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -812,7 +813,7 @@
             Brill, 2015.</bibl>
         </div>
       </div>
-      <div type="glossary" status="excluded">
+      <div type="glossary">
         <list type="glossary">
           <item>
             <gloss xml:id="UT22084-090-042-98" type="term" mode="match">
