--- a/translations/kangyur/placeholders/034-030_toh42-the_sutra_of_the_moon.xml
+++ b/translations/kangyur/placeholders/034-030_toh42-the_sutra_of_the_moon.xml
@@ -14,10 +14,10 @@
                 <editor role="proofreader" ref="contributors.xml#person-359">Daniela Espíndola</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.6 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-034-030"/>
                 <date/>
             </publicationStmt>
@@ -33,13 +33,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-03-10T08:31:45.471Z" user="admin">10/03/2021 08:31:45</note>
+                <note type="lastUpdated" date-time="2023-01-30T11:21:50.331Z" user="admin">30/01/2023 11:21:50</note>
     <note type="updated" update="translation-status" value="4" date-time="2020-12-08T12:56:12.293Z" user="line-tofte">4</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2020-12-08T12:56:12.293Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:30:56.299Z" user="line-tofte">3</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-10T08:30:56.299Z" user="line-tofte">Auto (update-publication-status)</note>
     <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-10T08:31:13.491Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-10T08:31:41.394Z" user="line-tofte">Auto (update-contributors)</note>
+    <note type="updated" update="translation-status" value="2.h" date-time="2021-11-01T12:57:48.196Z" user="line-tofte">2.h</note>
+    <note type="updated" update="text-version" value="0.0.5" date-time="2021-11-01T12:57:48.196Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-01-30T11:21:44.692Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-30T11:21:44.692Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
