--- a/translations/kangyur/placeholders/072-031_toh331-the_sutra_of_the_moon.xml
+++ b/translations/kangyur/placeholders/072-031_toh331-the_sutra_of_the_moon.xml
@@ -14,10 +14,10 @@
                 <editor role="proofreader" ref="contributors.xml#person-359">Daniela Espíndola</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2020</date>
+                <edition>v 0.0.8 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-072-031"/>
                 <date/>
             </publicationStmt>
@@ -33,7 +33,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-03-12T15:01:33.778Z" user="admin">12/03/2021 15:01:33</note>
+                <note type="lastUpdated" date-time="2023-01-30T11:22:30.036Z" user="admin">30/01/2023 11:22:30</note>
     <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:51:52.984Z" user="line-tofte">4</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:51:52.984Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:52:46.21Z" user="line-tofte">3</note>
@@ -43,7 +43,7 @@
     <note type="updated" update="text-version" value="0.0.5" date-time="2021-01-11T14:10:13.55Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="translation-status" value="2.h" date-time="2021-03-12T14:59:50.215Z" user="line-tofte">2.h</note>
     <note type="updated" update="text-version" value="0.0.6" date-time="2021-03-12T14:59:50.215Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.7" date-time="2021-03-12T15:01:29.545Z" user="line-tofte">Auto (update-contributors)</note>
+    <note type="updated" update="text-version" value="0.0.7" date-time="2021-03-12T15:01:29.545Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-01-30T11:22:24.414Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-30T11:22:24.414Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
