--- a/translations/kangyur/placeholders/059-013_toh170-the_sutra_of_the_questions_of_the_brahmani_srimati.xml
+++ b/translations/kangyur/placeholders/059-013_toh170-the_sutra_of_the_questions_of_the_brahmani_srimati.xml
@@ -4,18 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">bram ze mo dpal ldan mas zhus pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">śrīmatībrāhmaṇīparipṛcchāsūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Questions of the Brāhmaṇī Śrīmatī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bram ze mo dpal ldan mas zhus pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">śrīmatībrāhmaṇīparipṛcchāsūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">bram ze mo dpal ldan mas zhus pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaśrīmatībrāhmaṇī­paripṛcchā­nāmamahāyānasūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-49"/>
-                <editor role="reviser" ref="contributors.xml#person-60">Benjamin Ewing</editor>
-                <author role="translatorEng" ref="contributors.xml#person-67">Lowell Cook</author>
-                <consultant role="projectManager" ref="contributors.xml#person-67">Lowell Cook</consultant>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bram ze mo dpal ldan mas zhus pa zhes bya ba theg pa chen po'i mdo</title>
+                <author role="translatorMain" ref="eft:team-49"/>
+                <editor role="reviser" ref="eft:person-60">Benjamin Ewing</editor>
+                <author role="translatorEng" ref="eft:person-67">Lowell Cook</author>
+                <consultant role="projectManager" ref="eft:person-67">Lowell Cook</consultant>
+                <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2020</date>
+                <edition>v 0.0.8 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.g">
@@ -37,16 +38,19 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-30T12:37:49.226Z" user="admin">30/01/2023 12:37:49</note>
-    <note type="updated" update="translation-status" value="4" date-time="2020-10-27T13:18:41.447Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-27T13:18:41.447Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:04:10.71Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-12T11:04:10.71Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2020-11-12T11:04:43.692Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-05-25T11:02:21.342Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-05-25T11:02:21.342Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-05-25T11:03:12.103Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.6" date-time="2021-05-25T11:03:28.643Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-01-30T12:37:43.618Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-30T12:37:43.618Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-01-30T12:38:16.186Z" user="admin">30/01/2023 12:38:16</note>
+                <note type="updated" update="translation-status" value="4" date-time="2020-10-27T13:18:41.447Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-27T13:18:41.447Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:04:10.71Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-12T11:04:10.71Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2020-11-12T11:04:43.692Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-05-25T11:02:21.342Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-05-25T11:02:21.342Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2021-05-25T11:03:12.103Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2021-05-25T11:03:28.643Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-01-30T12:37:43.618Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-30T12:37:43.618Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-30T12:38:10.534Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
