--- a/translations/kangyur/placeholders/034-029_toh41-the_sutra_of_the_sun.xml
+++ b/translations/kangyur/placeholders/034-029_toh41-the_sutra_of_the_sun.xml
@@ -4,16 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">nyi ma'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">sūryasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Sun</title>
-                <author role="translatorMain" ref="contributors.xml#team-50"/>
-                <consultant role="projectManager" ref="contributors.xml#person-316">Giuliano Francisco Proença</consultant>
-                <author role="translatorEng" ref="contributors.xml#person-316">Giuliano Francisco Proença</author>
-                <editor role="proofreader" ref="contributors.xml#person-359">Daniela Espíndola</editor>
+                <title type="mainTitle" xml:lang="Sa-Ltn">sūryasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">nyi ma'i mdo/</title>
+                <author role="translatorMain" ref="eft:team-50"/>
+                <consultant role="projectManager" ref="eft:person-316">Giuliano Francisco Proença</consultant>
+                <author role="translatorEng" ref="eft:person-316">Giuliano Francisco Proença</author>
+                <editor role="proofreader" ref="eft:person-359">Daniela Espíndola</editor>
+                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2020</date>
+                <edition>v 0.0.7 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.g">
@@ -32,15 +33,18 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-30T11:21:12.888Z" user="admin">30/01/2023 11:21:12</note>
-    <note type="updated" update="translation-status" value="4" date-time="2020-12-08T12:55:39.006Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-12-08T12:55:39.006Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:29:46.538Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-10T08:29:46.538Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-10T08:30:03.308Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-10T08:30:31.064Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-11-01T12:43:54.916Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-11-01T12:43:54.916Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-01-30T11:21:07.263Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-30T11:21:07.263Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-01-30T12:38:56.558Z" user="admin">30/01/2023 12:38:56</note>
+                <note type="updated" update="translation-status" value="4" date-time="2020-12-08T12:55:39.006Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-12-08T12:55:39.006Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:29:46.538Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-10T08:29:46.538Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-10T08:30:03.308Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-10T08:30:31.064Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-11-01T12:43:54.916Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2021-11-01T12:43:54.916Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-01-30T11:21:07.263Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-30T11:21:07.263Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-30T12:38:50.932Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
