--- a/translations/kangyur/placeholders/034-030_toh42-the_sutra_of_the_moon.xml
+++ b/translations/kangyur/placeholders/034-030_toh42-the_sutra_of_the_moon.xml
@@ -4,17 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">zla ba'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">candrasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Moon</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">candrasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">zla ba'i mdo/</title>
                 <title type="otherTitle" xml:lang="en">[Note: similar to Toh 331 (probably translated from Sanskrit) but not the same.]</title>
-                <author role="translatorMain" ref="contributors.xml#team-50"/>
-                <consultant role="projectManager" ref="contributors.xml#person-316">Giuliano Francisco Proença</consultant>
-                <author role="translatorEng" ref="contributors.xml#person-316">Giuliano Francisco Proença</author>
-                <editor role="proofreader" ref="contributors.xml#person-359">Daniela Espíndola</editor>
+                <author role="translatorMain" ref="eft:team-50"/>
+                <consultant role="projectManager" ref="eft:person-316">Giuliano Francisco Proença</consultant>
+                <author role="translatorEng" ref="eft:person-316">Giuliano Francisco Proença</author>
+                <editor role="proofreader" ref="eft:person-359">Daniela Espíndola</editor>
+                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2020</date>
+                <edition>v 0.0.7 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.g">
@@ -33,15 +34,18 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-30T11:21:50.331Z" user="admin">30/01/2023 11:21:50</note>
-    <note type="updated" update="translation-status" value="4" date-time="2020-12-08T12:56:12.293Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-12-08T12:56:12.293Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:30:56.299Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-10T08:30:56.299Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-10T08:31:13.491Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-10T08:31:41.394Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-11-01T12:57:48.196Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-11-01T12:57:48.196Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-01-30T11:21:44.692Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-30T11:21:44.692Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-01-30T12:39:34.252Z" user="admin">30/01/2023 12:39:34</note>
+                <note type="updated" update="translation-status" value="4" date-time="2020-12-08T12:56:12.293Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-12-08T12:56:12.293Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:30:56.299Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-10T08:30:56.299Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-10T08:31:13.491Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-10T08:31:41.394Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-11-01T12:57:48.196Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2021-11-01T12:57:48.196Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-01-30T11:21:44.692Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-30T11:21:44.692Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-30T12:39:28.628Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
